@@ -4,6 +4,7 @@
 ### Issue Fixes
 * [#171](https://github.com/upfrontsystems/izinto-angular/issues/171) Handle query on database url
 * [#173](https://github.com/upfrontsystems/izinto-angular/issues/173) Add Query model and view
+* [#179](https://github.com/upfrontsystems/izinto-angular/issues/179) Link queries per dashboard
 
 0.6
 ---
